--- a/style.css
+++ b/style.css
@@ -221,6 +221,12 @@ h1,h2,h3,h4,h5,h6{
     padding: 17px;
     width: 120px;
 }
+#getting-started-button:hover{
+    cursor: pointer;
+}
+#getting-started-button:active{
+    background-color: white !important;
+}
 .social-icons{
     margin-top: 3%;
 }
