increse padding for `affiliate-extra-text`

--- a/style.css
+++ b/style.css
@@ -288,4 +288,7 @@ nav{
     .affiliate-heading{
         padding-bottom: 0px !important;
     }
+    #affiliate-extra-text{
+        padding: 1%;
+    }
 }
