--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 
 body{
     font-family: 'Poppins', sans-serif !important;
+    width: 100vh;
+    max-width: 100vh;
+    overflow-x: hidden;
 }
 p{
     font-size: 16px;
