--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ nav{
 }
 .solution-cards{
     margin-top: 15%;
+    width: 100%;
 }
 .move-up{
     animation-name: jerk;
@@ -179,6 +180,10 @@ nav{
     padding-top: 10px;
     margin-bottom: 0 !important;
     color: var(--main-grey-light);
+}
+.extras-inner-container{
+    background-color: red;
+    overflow-x: hidden;
 }
 .stunning-web-designs{
     transform: translateX(-150%);
